# pg_named_args

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
pg_named_args_macros/: Cargo.toml
pg_named_args_macros/src/: lib.rs
src/: lib.rs
tests/integration/: main.rs
tests/ui/: missing_field.rs  missing_field.stderr  no_args.rs  no_args.stderr  no_struct_name_multi.rs  no_struct_name_multi.stderr  no_struct_name_one.rs  no_struct_name_one.stderr  sql_missing_field.rs  sql_missing_field.stderr  struct_update.rs  struct_update.stderr  unused_field.rs  unused_field.stderr
