[package]
name = "pg_named_args"
version = "0.2.3"
edition = "2021"
readme = "README.md"
repository = "https://github.com/tandemdrive/pg_named_args"
description = "PostgreSQL named arguments"
license = "MIT OR Apache-2.0"
authors = ["TandemDrive"]
keywords = ["postgresql", "database", "query", "arguments", "macro"]
categories = ["database"]

[workspace]
members = ["pg_named_args_macros"]

[dependencies]
pg_named_args_macros = {version = "0.2.3", path = "./pg_named_args_macros"}

[dev-dependencies]
postgres-types = "0.2.6"
trybuild = "1.0.89"
