[package]
name = "pg_named_args"
version = "0.3.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/tandemdrive/pg_named_args"
description = "PostgreSQL named arguments"
license = "MIT OR Apache-2.0"
authors = ["TandemDrive"]
keywords = ["postgresql", "database", "query", "arguments", "macro"]
categories = ["database"]

[workspace]
members = ["pg_named_args_macros"]

[dependencies]
pg_named_args_macros = {version = "=0.3.0", path = "./pg_named_args_macros"}
postgres-types = "0.2.6"

[dev-dependencies]
trybuild = "1.0.89"
